<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game1.CustomizeActivity">

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="56dp"
        android:layout_height="52dp"
        android:onClick="toGame1Home"
        android:text="@string/game1_xButton"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game1Button7"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="312dp"
        android:onClick="changeSong"
        android:text="@string/game1_changeSong"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game1Button6"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="184dp"
        android:onClick="chooseBall"
        android:text="@string/game1_chooseBall"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>