<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game3.Game3Activity">

    <TextView
        android:id="@+id/livesText_Game3Activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textLife_Game3Activity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLife_Game3Activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/life"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreText_Game3Activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textScore_Game3Activity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScore_Game3Activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/score"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game3PlayBtn"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="152dp"
        android:onClick="toPlay"
        android:text="@string/game3_play"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/game3Button"
        android:layout_width="169dp"
        android:layout_height="105dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="300dp"
        android:onClick="toMainMenu"
        android:text="@string/next3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>