<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewLevel.OptionsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:onClick="toMainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_button" />

    <RadioGroup
        android:id="@+id/radioOptions_OptionsActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/red_button_OptionsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Red" />

        <RadioButton
            android:id="@+id/gray_button_OptionsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Gray" />
    </RadioGroup>

    <Button
        android:id="@+id/language_select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/language_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioOptions_OptionsActivity" />

    <Button
        android:id="@+id/choose_icon"
        android:text="@string/Choose_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_select_button" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/language_select_button"
        app:layout_constraintTop_toBottomOf="@+id/radioOptions_OptionsActivity"
        app:srcCompat="@drawable/en" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="56dp"
        android:layout_height="33dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/language_select_button"
        app:layout_constraintTop_toBottomOf="@+id/radioOptions_OptionsActivity"
        app:srcCompat="@drawable/fr" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="60dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/radioOptions_OptionsActivity"
        app:srcCompat="@drawable/ru" />

</androidx.constraintlayout.widget.ConstraintLayout>